fixed black lines + spacings + added vertical black lines in 3col

--- a/src/scss/_3col.scss
+++ b/src/scss/_3col.scss
@@ -1,4 +1,13 @@
+.col3__wrapper .main-block {
+  border-right: 0.5px solid black;
+  padding-right: 2em;
+  padding-left: 2em;
+  &:last-child {
+    border: 0;
+  }
+}
 .col3__block {
+  padding-bottom: 20px;
   .col3__block-imgbox {
     overflow:hidden;
     .col3__block-imgbox-img {
@@ -54,4 +63,15 @@
     border-right: 1px solid gray;
 
   }
+}
+
+.col3__black-line-top {
+  padding-top: 50px;
+  border-left: 0;
+}
+
+.col3__black-line-top, .col3__black-line-bottom {
+  margin: 0.2em;
+  border-bottom: 1px solid black;
+  opacity: 0.5;
 }
