--- a/src/scss/_latest-stories.scss
+++ b/src/scss/_latest-stories.scss
@@ -4,6 +4,7 @@
     font-size: 2em;
     font-family: 'Montserrat', 'sans-serif';
     font-weight: lighter;
+    padding-top: 30px;
   }
   .latest-stories__textbox-pretitle {
     font-family: 'Montserrat', 'sans-serif';
