--- a/src/scss/allstories.scss
+++ b/src/scss/allstories.scss
@@ -87,7 +87,7 @@
 	font-weight: lighter;
 }
 
-.black-line {
+.main-story__black-line {
 	width: 100%;
 	border-bottom: 1px solid black;
 	opacity: 0.5;
@@ -97,8 +97,8 @@
 	padding-bottom: 43px;
 }
 
-.space {
-  padding-bottom:33px;
+.main-story__space {
+  padding-bottom: 50px;
 }
 
 .main-story {
